try and fix auto scroll on iOS

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -3,6 +3,7 @@ body,
 html {
 	width: 100%;
 	height: 100%;
+	-webkit-overflow-scrolling: touch;
 }
 
 body:before {
